<?xml version="1.0"?>
<package format="2">
  <name>mushr_pf</name>
  <version>1.0.0</version>
  <description>Particle filter</description>
  <author>Lirui Wang</author>
  <author>Joseph Shieh</author>
  <author>Chi-Heng Hung</author>
  <author>Nansong Yi</author>

  <maintainer email="schmttle@cs.washington.edu">Schmittle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>

  </export>
</package>
